# eth-batch-exit-cli

./: .gitignore  Makefile  README.md  env.example  exit_validators.py  pyproject.toml
tests/: test_exit_validators.py
